All files have been updated

--- a/recipes/braised-beef.html/.html
+++ b/recipes/braised-beef.html/.html
@@ -13,36 +13,36 @@
     <h2>Ingredients</h2>
     
     <ul>
-2 pounds beef
-2 tablespoons vegetable oil or palm oil
-2 large onions (1 chopped, 1 blended)
-3 medium tomatoes (blended)
-2 tablespoons tomato paste
-1 tablespoon ginger paste
-1 tablespoon garlic paste
-1 teaspoon ground black pepper
-1 teaspoon ground cloves (pepre)
-1 teaspoon paprika or suya spice
-1 teaspoon curry powder
-1 teaspoon thyme (fresh or dried)
-1 scotch bonnet pepper (blended or chopped)
-1 bay leaf
-1 cup beef stock or water
-Salt to taste
+<li>2 pounds beef</li>
+<li>2 tablespoons vegetable oil or palm oil</li>
+ <li>2 large onions (1 chopped, 1 blended)</li>
+ <li>3 medium tomatoes (blended)</li>
+<li>2 tablespoons tomato paste</li>
+<li>1 tablespoon ginger paste</li>
+<li>1 tablespoon garlic paste</li>
+<li>1 teaspoon ground black pepper</li>
+<li>1 teaspoon ground cloves (pepre)</li>
+<li>1 teaspoon paprika or suya spice</li>
+<li>1 teaspoon curry powder</li>
+<li>1 teaspoon thyme (fresh or dried)</li>
+<li>1 scotch bonnet pepper (blended or chopped)</li>
+<li>1 bay leaf</li>
+<li>1 cup beef stock or water</li>
+<li>Salt to taste</li>  
     </ul>
 
 <h2>Steps</h2>
 <ol>
-1. Prepare the beef: Wash and cut beef into medium chunks. Season with salt, black pepper, ginger, garlic, cloves, and suya spice. Let it marinate for at least 30 minutes.
-2. Sear the beef: Heat oil in a pot. Brown the beef on all sides to lock in flavor, then remove and set aside.
-3. Make the base sauce: In the same pot, add chopped onions and fry until golden. Add tomato paste and cook for 2 minutes. Then add the blended tomatoes, blended onion, and scotch bonnet pepper. Cook until the sauce thickens and the oil begins to separate.
-4. Add spices: Stir in curry powder, thyme, and the seasoning cube. Mix well.
-5. Add the beef: Return the browned beef to the pot, stir to coat it well with the sauce.
-6. Add liquid: Pour in beef stock or water until it just covers the meat. Add bay leaf, then cover and cook on low heat for 2–3 hours, stirring occasionally.
-7. Finish cooking: Once the beef is tender and the sauce is rich and thick, taste and adjust seasoning if needed.
-8. Serve: Serve hot with boiled rice, yam, plantain, or any preferred side dish.   
+<li>Prepare the beef: Wash and cut beef into medium chunks. Season with salt, black pepper, ginger, garlic, cloves, and suya spice. Let it marinate for at least 30 minutes</li>
+<li>Sear the beef: Heat oil in a pot. Brown the beef on all sides to lock in flavor, then remove and set aside.</li>
+<li>Make the base sauce: In the same pot, add chopped onions and fry until golden. Add tomato paste and cook for 2 minutes. Then add the blended tomatoes, blended onion, and scotch bonnet pepper. Cook until the sauce thickens and the oil begins to separate.</li>
+<li>Add spices: Stir in curry powder, thyme, and the seasoning cube. Mix well.</li>
+<li>Add the beef: Return the browned beef to the pot, stir to coat it well with the sauce.</li>
+<li>Add liquid: Pour in beef stock or water until it just covers the meat. Add bay leaf, then cover and cook on low heat for 2–3 hours, stirring occasionally.</li>
+<li>Finish cooking: Once the beef is tender and the sauce is rich and thick, taste and adjust seasoning if needed.</li>
+<li>Serve: Serve hot with boiled rice, yam, plantain, or any preferred side dish.</li>   
 </ol>
-    <a href="../index.html">Home</a>
+    <a href="\\wsl.localhost\Ubuntu\home\martha\odin-recipies\index.html">Home</a>
 
 </body>
 </html>
