--- a/recipes/pulled-pork.html
+++ b/recipes/pulled-pork.html
@@ -12,68 +12,70 @@
 <p>Pulled pork is a tender, flavorful dish made by slow-cooking a pork shoulder until it becomes so soft that it can be easily shredded with a fork. The meat is typically seasoned with a blend of spices such as paprika, garlic powder, brown sugar, and black pepper, then cooked low and slow in an oven. Once cooked, the pork is shredded and often mixed with tangy barbecue sauce, making it perfect for sandwiches, tacos, or serving alongside classic sides like coleslaw and cornbread.</p>
 <h2>Ingredients needed</h2>
 <ul>
-	•	1.8–2.5 kg (4–5.5 lb) pork shoulder (also called pork butt or Boston butt)
-	•	2 tbsp olive oil or vegetable oil
-	•	2 tbsp brown sugar
-	•	1 tbsp paprika (smoked paprika if you have it)
-	•	2 tsp salt
-	•	1 tsp black pepper
-	•	1 tsp garlic powder
-	•	1 tsp onion powder
-	•	1 tsp chili powder or cayenne pepper (optional, for heat)
-	•	1 tsp ground cumin
-	•	1 tsp mustard powder (optional but adds tang)
-	•	1 cup chicken stock or beef stock
-	•	½ cup apple cider vinegar
-	•	½ cup barbecue sauce (your favorite brand)
-	•	2 tbsp Worcestershire sauce
-	•	1 tbsp brown sugar   
+	     <li>1.8–2.5 kg (4–5.5 lb) pork shoulder (also called pork butt or Boston butt</li>)
+	     <li> 2 tbsp olive oil or vegetable oil</li>
+		 <li>2 tbsp brown sugar</li>
+	     <li>1 tbsp paprika (smoked paprika if you have it)</li>
+		 <li>2 tsp salt</li>
+	     <li>1 tsp black pepper</li>
+		 <li>1 tsp garlic powder</li>
+		 <li>1 tsp onion powder</li>
+		 <li>1 tsp chili powder or cayenne pepper (optional, for heat)</li>
+	     <li>1 tsp ground cumin</li>
+	     <li>1 tsp mustard powder (optional but adds tang) </li>
+		 <li>1 cup chicken stock or beef stock </li>
+		 <li>½ cup apple cider vinegar </li>
+		 <li>½ cup barbecue sauce (your favorite brand) </li>
+		 <li>2 tbsp Worcestershire sauce </li>
+		 <li>1 tbsp brown sugar </li>   
 </ul>
 
 <h3>Stepsin preparing the recipe</h3>
-<ol>
-   Step 1: Prepare the Pork
-	1.	Trim the fat – Remove any thick or tough layers of fat, but leave a thin layer for flavor.
-	2.	Pat the pork dry with paper towels — this helps the rub stick better.
-	3.	Rub with oil – Lightly coat the pork with olive oil.
-	4.	Apply the dry rub – Mix all the rub ingredients together, then massage it thoroughly into the pork on all sides.
-	•	Tip: Let it sit for at least 30 minutes at room temperature (or refrigerate overnight for stronger flavor).
 
-Step 2: Sear the Pork (for flavor)
-	1.	Preheat a large oven-safe pot or Dutch oven over medium-high heat.
-	2.	Add 1 tbsp of oil.
-	3.	Sear the pork for 2–3 minutes per side, until browned all around.
-	•	This creates a flavorful crust and helps seal in juices.
+   <li>Step 1: Prepare the Pork</li>
+	   <li>1.	Trim the fat – Remove any thick or tough layers of fat, but leave a thin layer for flavor.</li>
+	   <li>2.	Pat the pork dry with paper towels — this helps the rub stick better.</li>
+	   <li>3.	Rub with oil – Lightly coat the pork with olive oil.</li>
+	   <li>4.	Apply the dry rub – Mix all the rub ingredients together, then massage it thoroughly into the pork on all sides.</li>
+	      <li>•	Tip: Let it sit for at least 30 minutes at room temperature (or refrigerate overnight for stronger flavor).</li>
 
-Step 3: Add Cooking Liquid
-	1.	Pour in the stock, vinegar, barbecue sauce, Worcestershire sauce, and brown sugar.
-	2.	Stir gently around the pork to combine, but don’t wash off the spice rub.
-	3.	Cover the pot tightly with a lid or foil.
+<li>Step 2: Sear the Pork (for flavor) </li>
+	<li>1.	Preheat a large oven-safe pot or Dutch oven over medium-high heat.</li>
+	<li>2.	Add 1 tbsp of oil.
+	<li>3.	Sear the pork for 2–3 minutes per side, until browned all around.</li>
+	<li>•	This creates a flavorful crust and helps seal in juices.</li>
 
-Step 4: Slow Cook in the Oven
-	1.	Preheat your oven to 150°C (300°F).
-	2.	Place the covered pot in the oven and cook for 4½ to 6 hours, or until:
-	•	The meat is fall-apart tender, and
-	•	You can easily shred it with a fork.
-(Internal temperature should reach around 90–95°C / 195–205°F.)
+<li>Step 3: Add Cooking Liquid</li>
+	<li>1.	Pour in the stock, vinegar, barbecue sauce, Worcestershire sauce, and brown sugar.</li>
+	<li>2.	Stir gently around the pork to combine, but don’t wash off the spice rub.</li>
+	<li>3.	Cover the pot tightly with a lid or foil.</li>
 
-Step 5: Shred the Pork
-	1.	Remove the pork from the pot and place it on a large tray or cutting board.
-	2.	Use two forks (or shredding claws if you have them) to pull the meat apart into strands.
-	3.	Discard any large fatty pieces.
+<li>Step 4: Slow Cook in the Oven</li> 
+	<li>1.Preheat your oven to 150°C (300°F).</li>
+	<li>2.Place the covered pot in the oven and cook for 4½ to 6 hours, or until:	
+	<li>•The meat is fall-apart tender, and</li>
+	<li>•You can easily shred it with a fork.</li>
+<li>(Internal temperature should reach around 90–95°C / 195–205°F.)</li>
+</ul>
 
-Step 6: Mix and Sauce
-	1.	Skim excess fat from the cooking liquid in the pot.
-	2.	Return the shredded pork to the pot and mix it with the juices.
-	3.	Add more barbecue sauce if desired — start with ½ cup and adjust to taste.
-	4.	Simmer for 10–15 minutes on low heat to let the meat soak up flavor.
+<li>Step 5: Shred the Pork</li>
+	<li>1.	Remove the pork from the pot and place it on a large tray or cutting board.</li>
+	<li>2.	Use two forks (or shredding claws if you have them) to pull the meat apart into strands.</li>
+	<li>3.	Discard any large fatty pieces.</li>
 
-Step 7: Serve
-	•	Serve the pulled pork on toasted buns with coleslaw on top, or alongside rice, mashed potatoes, or cornbread.
+<li>Step 6: Mix and Sauce</li>
+	<li>1.	Skim excess fat from the cooking liquid in the pot.</li>
+	<li>2.	Return the shredded pork to the pot and mix it with the juices.</li>
+	<li>3.	Add more barbecue sauce if desired — start with ½ cup and adjust to taste.</li>
+	<li>4.	Simmer for 10–15 minutes on low heat to let the meat soak up flavor.</li>
 
+<li>Step 7: Serve</li>
+	<li>•	Serve the pulled pork on toasted buns with coleslaw on top, or alongside rice, mashed potatoes, or cornbread.</li>
     
- <a href="\\wsl.localhost\Ubuntu\home\martha\odin-recipies\index.html">Home</a>
-</ol>
+ 
+	
+	<a href="\\wsl.localhost\Ubuntu\home\martha\odin-recipies\index.html">Home</a>
+
 
 </body>
 </html>
