--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="\\wsl.localhost\Ubuntu\home\martha\odin-recipies\braised-beef.html">braised-beef</a>
-    <a href="\\wsl.localhost\Ubuntu\home\martha\odin-recipies\recipes\pulled-pork.html"></a>
+    <ul>
+    <li><a href="\\wsl.localhost\Ubuntu\home\martha\odin-recipies\recipes\braised-beef.html">braised-beef</a></li>
+    <li><a href="\\wsl.localhost\Ubuntu\home\martha\odin-recipies\recipes\pulled-pork.html">pulled-pork</a></li>
+    <li><a href="\\wsl.localhost\Ubuntu\home\martha\odin-recipies\recipes\paella.html">paella</a></li>
+</ul>
 </body>
 </html>
