Corrected grammar in pulled-pork.html Finish uncompleted work in paella.html

--- a/recipes/paella.html
+++ b/recipes/paella.html
@@ -9,9 +9,9 @@
     <h1>Spanish Paella</h1>
     <img src="C:\Users\Usr\Pictures\Paella.jpg">
     <h3>Traditional Spanish Paella</h3>
-    <p></p>
+    <p>Paella is a traditional Spanish rice dish that originated in Valencia and is famous for its vibrant flavors and colorful presentation. It’s typically made by sautéing onions, garlic, and tomatoes in olive oil, then adding short-grain rice and simmering it in a rich saffron-infused broth. Common ingredients include chicken, rabbit, seafood (such as shrimp, mussels, or squid), and vegetables like bell peppers and peas. The dish is cooked in a wide, shallow pan to create a delicious crust at the bottom called socarrat. Paella is often enjoyed with lemon wedges and best served hot, straight from the pan.</p>
+	<h2>Ingredients</h2>
     <ul>
-
 	<li>	2 tbsp olive oil </li>
 	<li>	450 g (1 lb) chicken thighs or drumsticks, cut into bite-size pieces </li>
 	<li>	200 g (7 oz) chorizo sausage, sliced (optional but adds great flavor) </li>
@@ -32,6 +32,69 @@
 	<li>	Fresh parsley and lemon wedges, for garnish </li>
    
     </ul>
+	<h2>Preparation Steps</h2>
+
+	<ol>
+        <li>Prepare Ingredients
+     	<ul>Measure and prepare all your ingredients in advance (paella moves quickly once it starts cooking).
+		Warm the stock in a separate pot; keep it hot but not boiling.
+    	If using saffron, soak it in 2 tbsp of hot water for 10 minutes to release its color and flavor.</ul>
+        </li>
+		<li>Brown the Chicken and Chorizo
+		<ul>Heat 2 tbsp olive oil in a large paella pan (or wide, shallow skillet) over medium heat.
+		Add the chicken pieces, season with salt and pepper, and brown for 5–7 minutes until golden on all sides. Remove and set aside.
+		Add the chorizo slices, cook for 2–3 minutes until lightly crispy, then remove and set aside with the chicken.
+        </ul>
+        </li> 
+		<li>
+			Cook the Vegetables
+			<ul>
+		  In the same pan, add the onion, bell peppers, and a pinch of salt.
+		  Sauté for 5 minutes until softened.
+		  Add the garlic and cook another 1 minute.
+		  Stir in the grated tomatoes and cook for 5–6 minutes until the mixture thickens — this is your sofrito, the flavor base.
+          </ul>
+		</li>
+		<li>
+			Add Rice and Spices
+	    <ul>
+		Stir in the rice, coating it well in the tomato mixture and oil — cook for 1–2 minutes until the grains become slightly translucent.
+		Add the smoked paprika, saffron (with soaking water), and stir well.
+	    </ul>
+        </li>
+		<li>
+			Add Liquid and Simmer
+        <ul>
+	    Pour in the white wine (if using) and let it simmer for 1 minute to reduce slightly.
+	    Add the hot stock, chicken, and chorizo back into the pan.
+	    Stir once to distribute evenly — then do not stir again (stirring makes it mushy; you want the rice to form a nice crust called socarrat at the bottom).
+		Adjust the heat so the mixture gently simmers. Cook uncovered for 15–18 minutes.
+	    </ul>
+		</li>
+		<li>
+			Add Seafood and Peas
+         <ul>
+		Arrange the shrimp and mussels/clams on top of the rice.
+	    Sprinkle over the peas.
+	    Continue cooking for 10 more minutes, or until:
+		<ul>
+			<li>The rice is tender and has absorbed almost all the liquid.</li>
+	        <li>The shrimp are pink and cooked.</li>
+	        <li>The mussels have opened (discard any that stay closed).</li>
+		</ul>
+	    </ul>
+		</li>
+		<li>
+			Rest and Serve
+        <ul>
+	     Remove the pan from heat, cover it with foil or a clean kitchen towel, and let it rest for 5–10 minutes.
+		 Garnish with chopped parsley and lemon wedges.
+		</ul>
+		</li>
+		<li>
+			Serve and Enjoy
+		</li>
+	</ol>
 
     <a href="\\wsl.localhost\Ubuntu\home\martha\odin-recipies\index.html">Home</a>
 </body>
